CZHDEV-402 fixed margin on atm-button__item for lost gap between buttons

--- a/src/modules/button_group/button_group.scss
+++ b/src/modules/button_group/button_group.scss
@@ -3,7 +3,7 @@
 
   @include resetList;
 
-  .atm-button {
+  &__item {
     margin-right: 2px;
 
     &:last-of-type {
